--- a/themes/raditian-free-hugo-theme-data-science/exampleSite/config.toml
+++ b/themes/raditian-free-hugo-theme-data-science/exampleSite/config.toml
@@ -59,7 +59,7 @@ theme = "raditian-free-hugo-theme"
 
 [params]
 
-  sections = ["showcase", "about", "experience", "education", "client-and-work", "testimonial", "contact", "newsletter"]
+  sections = ["showcase", "about", "client-and-work", "experience", "education", "testimonial", "contact", "newsletter"]
 
   googleTagManagerID = "GTM-000000" # Google Analytics works with Google Tag Manager
 
