--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ params:
       alt: Design & Code - Business Science
       x: img/general/business-science-logo.png
   googleTagManagerID: GTM-000000
-  googleAnalytics: UA-76139189-2
+  googleAnalyticsID: UA-76139189-2
   logo:
     text1: Matt
     text2: Dancho
