--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ params:
       _2x: img/general/business-science-logo.png
       alt: Design & Code - Business Science
       x: img/general/business-science-logo.png
-  googleAnalyticsID: UA-76139189-2
+  googleAnalyticsID: ''
   logo:
     text1: Matt
     text2: Dancho
