--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -5,7 +5,7 @@ head:
 showcase:
   enable: true
   title: "Hello, I’m Matt Dancho."
-  subtitle: "Data Scientist"
+  subtitle: "Data Scientist, Trainer & Mentor"
   description: "Matt is the founder of <a target='_blank' href='https://www.business-science.io/'>Business Science</a>, an online data science school that helps students become a data scientist in 6-months or less."
   image:
     x: "img/showcase/data-science.gif"
